[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Character/VisionSensor.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 203.704

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, -135, -150, 135, -150 )

[node name="VisionSensor" type="Node2D"]
script = ExtResource( 1 )

[node name="PerceptionVision" type="Area2D" parent="."]
input_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 514

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerceptionVision"]
shape = SubResource( 1 )

[node name="RealVision" type="Area2D" parent="."]
input_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 514

[node name="CollisionShape2D" type="CollisionShape2D" parent="RealVision"]
shape = SubResource( 2 )
[connection signal="area_exited" from="PerceptionVision" to="." method="_on_PerceptionVision_area_exited"]
[connection signal="body_exited" from="PerceptionVision" to="." method="_on_PerceptionVision_body_exited"]
[connection signal="area_entered" from="RealVision" to="." method="_on_RealVision_area_entered"]
[connection signal="body_entered" from="RealVision" to="." method="_on_RealVision_body_entered"]
